--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@mediapipe/holistic": "^0.5.1635989137",
     "@ngrx/store": "^13.0.2",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
