--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.1.0",
     "@mediapipe/holistic": "^0.5.1635989137",
     "@ngrx/store": "^13.0.2",
+    "@webpixels/css": "^1.1.92",
+    "bootstrap": "^5.1.3",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -27,7 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.4",
-    "@angular/cli": "~13.1.4",
+    "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
