--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@ngrx/store": "^13.0.2",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "circular-dependency-plugin": "^5.2.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
