--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           # Include the devDependencies irrespective of the NODE_ENV
           npm install --include dev
           npm install -g @angular/cli
-          npm run build
+          npm run build -- -c "development"
           # Listing files
           ls -la
       - uses: jakejarvis/s3-sync-action@v0.5.1
