--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,26 +25,26 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-#       - name: Setup tmate session
-#         uses: mxschmitt/action-tmate@v3
-#         timeout-minutes: 15
       - name: Set env to staging
         if: endsWith(github.ref, '/stage')
         run: |
           echo "ENVIRONMENT=stage" >> $GITHUB_ENV
           echo "NODE_ENV=stage" >> $GITHUB_ENV
+
       - name: Set env to production
         if: endsWith(github.ref, '/main')
         run: |
           echo "ENVIRONMENT=production" >> $GITHUB_ENV
           echo "NODE_ENV=production" >> $GITHUB_ENV
+
+      - name: Set env to development
+        if: endsWith(github.ref, '/dev')
+        run: |
+          echo "ENVIRONMENT=development" >> $GITHUB_ENV
+          echo "NODE_ENV=development" >> $GITHUB_ENV
+
       - name: npm install and npm run build
         run: |
-          # Include the devDependencies irrespective of the NODE_ENV
-          npm install --include dev
-          npm install -g @angular/cli
-          npm run build -- -c "development"
-
           # Print current env
           echo "Env: $(echo $ENVIRONMENT)"
 
@@ -53,6 +53,12 @@ jobs:
 
           # Listing files
           ls -la
+
+          # Include the devDependencies irrespective of the NODE_ENV
+          npm install --include dev
+          npm install -g @angular/cli
+          npm run build -- -c "$ENVIRONMENT"
+
       - uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --follow-symlinks --delete
