--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@lottiefiles/lottie-player": "^1.5.6",
     "@mediapipe/holistic": "^0.5.1635989137",
     "@ngrx/store": "^13.0.2",
     "@webpixels/css": "^1.1.92",
