--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "howler": "^2.2.3",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -39,6 +40,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
+    "@types/howler": "^2.2.7",
     "circular-dependency-plugin": "^5.2.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
