--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@lottiefiles/lottie-player": "^1.5.6",
     "@mediapipe/holistic": "^0.5.1635989137",
     "@ngrx/store": "^13.0.2",
@@ -37,10 +41,10 @@
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/howler": "^2.2.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
-    "@types/howler": "^2.2.7",
     "circular-dependency-plugin": "^5.2.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
