--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "howler": "^2.2.3",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
+    "safe-pipe": "^2.0.2",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
