--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,8 @@
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.1.0",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/howler": "^2.2.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -51,6 +54,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "circular-dependency-plugin": "^5.2.2",
     "eslint": "^8.14.0",
+    "husky": "^7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
