--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "circular-dependency-plugin": "^5.2.2",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
@@ -61,6 +62,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "prettier": "2.6.2",
     "typescript": "~4.5.2"
   }
 }
