--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "circular-dependency-plugin": "^5.2.2",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
