--- a/angular.json
+++ b/angular.json
@@ -102,6 +102,26 @@
                   "with": "src/environments/environment.dev.ts"
                 }
               ]
+            },
+            "local": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "3mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -117,6 +137,9 @@
             },
             "development": {
               "browserTarget": "activities:build:development"
+            },
+            "local": {
+              "browserTarget": "activities:build:local"
             }
           },
           "defaultConfiguration": "development"
