--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4201",
+    "start": "ng serve --port 4201 --configuration local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
