--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "howler": "^2.2.3",
+    "jwt-decode": "^3.1.2",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
