--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@lottiefiles/lottie-player": "^1.5.6",
     "@mediapipe/holistic": "^0.5.1635989137",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "^13.0.2",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "howler": "^2.2.3",
