--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mediapipe/holistic": "^0.5.1635989137",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "^13.0.2",
+    "@popperjs/core": "^2.11.5",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
