--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           ls -la
 
           # Include the devDependencies irrespective of the NODE_ENV
-          npm install --include dev --legacy-peer-deps
+          npm install --include dev
           npm install -g @angular/cli
           npm run build -- -c "$ENVIRONMENT"
 
