--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@lottiefiles/lottie-player": "^1.5.6",
     "@mediapipe/holistic": "^0.5.1635989137",
+    "@mediapipe/pose": "^0.5.1635988162",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "^13.0.2",
     "@popperjs/core": "^2.11.5",
