perf: ⚡️ Making activity experience compile faster locally
It was earlier very slow. atm it is happening in a few seconds on my
local system.

✅ Closes: SH-383

--- a/angular.json
+++ b/angular.json
@@ -104,6 +104,12 @@
               ]
             },
             "local": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
               "budgets": [
                 {
                   "type": "initial",
