--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "graphql-request": "^4.2.0",
     "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
+    "lottie-web": "^5.9.6",
+    "ngx-lottie": "^8.2.0",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
