--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --port 4201 --configuration local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "lint-staged --allow-empty",
     "test": "ng test",
     "prepare": "husky install"
   },
@@ -37,6 +37,7 @@
     "graphql-request": "^4.2.0",
     "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
+    "lint-staged": "^13.0.3",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
