--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --port 4201 --configuration local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "lint": "lint-staged --allow-empty",
+    "lint": "lint-staged --allow-empty; eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "ng test",
     "prepare": "husky install"
   },
