--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --port 4201 --configuration local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "lint": "lint-staged --allow-empty; eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "auto-format": "lint-staged --allow-empty",
     "test": "ng test",
     "prepare": "husky install"
   },
