--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "^13.0.2",
     "@popperjs/core": "^2.11.5",
+    "@types/lodash": "^4.14.183",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
@@ -38,6 +39,7 @@
     "howler": "^2.2.3",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "phaser": "^3.55.2",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
