--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
+    "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
