--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
-    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/build-angular": "^13.3.9",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "~13.1.0",
     "@commitlint/cli": "^16.2.4",
