--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,9 @@ jobs:
           npm install -g @angular/cli
           npm run build -- -c "$ENVIRONMENT"
 
+      # - name: running unit tests
+      #   run: npm run test
+
       - uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --follow-symlinks --delete
