--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "auto-format": "lint-staged --allow-empty",
     "test": "ng test",
-    "test:chromeheadless": "ng test --browsers ChromeHeadless",
+    "test:chromeheadless": "ng test --watch=false --browsers=ChromeHeadless",
     "prepare": "husky install"
   },
   "private": true,
