--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "auto-format": "lint-staged --allow-empty",
     "test": "ng test",
-    "test:chromeheadless": "ng test --watch=false --browsers=ChromeHeadless",
+    "test:chromeheadless": "ng test --watch=false --browsers=ChromeHeadless --code-coverage",
     "prepare": "husky install"
   },
   "private": true,
@@ -37,6 +37,7 @@
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "check-code-coverage": "^1.10.4",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "howler": "^2.2.3",
