chore: 🤖 update the install command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
           ls -la
 
           # Include the devDependencies irrespective of the NODE_ENV
-          npm ci --ignore-scripts
+          npm ci --ignore-scripts --legacy-peer-deps
           npm run build -- -c "$ENVIRONMENT"
 
       - name: running unit tests
