--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
   update-coverage-badge:
     runs-on: ubuntu-latest
     needs: ci-cd
+    if: github.ref == 'refs/heads/dev' # runs only on `dev` branch
     steps:
       - uses: actions/checkout@v2
 
