--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "@popperjs/core": "^2.11.5",
+    "@tensorflow-models/posenet": "^2.2.2",
     "@types/lodash": "^4.14.183",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
@@ -46,6 +47,7 @@
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
+    "long": "^5.2.1",
     "phaser": "^3.55.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
@@ -68,6 +70,7 @@
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
+    "@types/long": "4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "circular-dependency-plugin": "^5.2.2",
