--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,8 @@ jobs:
           # Listing files
           ls -la
 
-          npm ci --ignore-scripts --legacy-peer-deps
+          npm install -g @angular/cli
+          npm i --ignore-scripts --legacy-peer-deps --save-dev
           npm run build -- -c "$ENVIRONMENT"
 
       - name: running unit tests
