ci: 🎡 enable tmate

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,8 @@ jobs:
           echo "S3_ENV=dev" >> $GITHUB_ENV
 
       # Uncomment this if you want to debug Github action using SSH.
-      # - name: Setup tmate sessions
-      #   uses: mxschmitt/action-tmate@v3
+      - name: Setup tmate sessions
+        uses: mxschmitt/action-tmate@v3
 
       - name: npm install and npm run build
         run: |
