--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@ngrx/store-devtools": "^13.0.2",
     "@popperjs/core": "^2.11.5",
     "@tensorflow-models/posenet": "^2.2.2",
+    "@tensorflow/tfjs-converter": "^3.21.0",
+    "@tensorflow/tfjs-core": "^3.21.0",
     "@types/lodash": "^4.14.183",
     "@webpixels/css": "^1.1.92",
     "bootstrap": "^5.1.3",
