--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
           npm install --include dev --legacy-peer-deps
           npm install -g @angular/cli
           npm run build -- -c "$ENVIRONMENT"
-          cp version.json ./dist
+          cp version.json ./dist/activities/
 
           # Listing files...
           ls -la
@@ -83,7 +83,7 @@ jobs:
 
       - name: Printing app version
         run: |
-          cat dist/version.json | jq
+          cat dist/activities/version.json | jq
 
       - name: running unit tests
         run: npm run test:chromeheadless
