--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/localize": "^15.2.8",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
@@ -50,6 +51,7 @@
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "long": "^5.2.1",
+    "ngx-owl-carousel-o": "^7.0.2",
     "phaser": "^3.55.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
