Revert "fix: 🐛 phaser version and added xp to badge type"
This reverts commit a4ad04f1c32a8aaa913559f66bcb04bc7feeddee.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lodash": "^4.17.21",
     "long": "^5.2.1",
     "ngx-owl-carousel-o": "^7.0.2",
-    "phaser": "~3.55.2",
+    "phaser": "^3.55.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "safe-pipe": "^2.0.2",
