--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4201 --configuration local",
-    "start:local-pure": "ng serve --port 4201 --configuration local-pure",
+    "build:local-pure": "ng build --configuration local-pure",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
